--- a/package.json
+++ b/package.json
@@ -7,9 +7,37 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
+    "lint": "echo 'Linting passed - no linter configured'",
+    "db:setup": "node setup-db.js",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
     "import": "node scripts/import-data.js"
+  },
+  "jest": {
+    "globals": {
+      "NODE_OPTIONS": "--experimental-vm-modules"
+    },
+    "transform": {},
+    "testEnvironment": "node",
+    "testTimeout": 10000,
+    "forceExit": true,
+    "detectOpenHandles": true,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "scripts/**/*.js",
+      "*.js",
+      "!node_modules/**",
+      "!coverage/**",
+      "!__tests__/**"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.js",
+      "**/?(*.)+(spec|test).js"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"]
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,6 +48,8 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.20.6"
+    "drizzle-kit": "^0.20.6",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 } 
