--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node setup-db.js && node server.js",
+    "start": "node setup-db.js && node scripts/import-data.js && node server.js",
     "start:prod": "node scripts/start-production.js",
+    "start:dev": "node setup-db.js && node server.js",
     "dev": "node --watch server.js",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
@@ -15,6 +16,7 @@
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
     "import": "node scripts/import-data.js",
+    "data-check": "node scripts/check-data.js",
     "deploy-check": "node scripts/deploy-check.js"
   },
   "jest": {
