--- a/render.yaml
+++ b/render.yaml
@@ -1,34 +1,22 @@
 services:
   - type: web
-    name: cam-database
-    env: node
+    name: cam-server
+    runtime: node
     plan: free
-    buildCommand: npm ci
-    startCommand: npm run start:prod
-    healthCheckPath: /health
+    branch: main
+    buildCommand: npm install
+    startCommand: node scripts/start-production.js
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DB_HOST
-        fromDatabase:
-          name: cam-postgres
-          property: host
-      - key: DB_PORT
-        fromDatabase:
-          name: cam-postgres
-          property: port
-      - key: DB_NAME
-        fromDatabase:
-          name: cam-postgres
-          property: database
-      - key: DB_USER
-        fromDatabase:
-          name: cam-postgres
-          property: user
-      - key: DB_PASSWORD
-        fromDatabase:
-          name: cam-postgres
-          property: password
+      - key: PORT
+        value: 3001
+      - key: DATABASE_URL
+        sync: false
+    disk:
+      name: cam-data
+      mountPath: /data
+    autoDeploy: true
 
 databases:
   - name: cam-postgres
