--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,9 @@ services:
       - key: PORT
         value: 3001
       - key: DATABASE_URL
-        sync: false
+        fromDatabase:
+          name: cam-postgres
+          property: connectionString
     disk:
       name: cam-data
       mountPath: /data
