--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,7 @@ services:
       - key: PORT
         value: 3001
       - key: DATABASE_URL
-        fromDatabase:
-          name: cam-postgres
-          property: connectionString
+        sync: false
     disk:
       name: cam-data
       mountPath: /data
