--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,7 @@ services:
       - key: PORT
         value: 3001
       - key: DATABASE_URL
-        fromDatabase:
-          name: cam-postgres
-          property: connectionString
+        sync: false
     disk:
       name: cam-data
       mountPath: /data
@@ -23,5 +21,4 @@ services:
 databases:
   - name: cam-postgres
     plan: free
-    databaseName: cam_database
-    user: cam_postgres_zd0v_user
+    databaseName: cam_database 
